--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/script.js?v=1"></script>
 
 </body>
 
