--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
               <p>
                 Disfruta de los nuevos exitos y noticias de nuestra ciudad y de toda la costa colombiana.
               </p>
-              <!-- <a href="#" class="about-btn">Conoce mas <i class="bx bx-chevron-right"></i></a> -->
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
@@ -178,7 +177,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts  section-bg">
+    <!-- <section id="counts" class="counts  section-bg">
       <div class="container">
 
         <div class="row no-gutters">
@@ -195,7 +194,8 @@
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section> -->
+    <!-- End Counts Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -204,7 +204,9 @@
         <div class="text-center">
           <h3>Necesitas una propaganda para tu negocio.</h3>
           <p>Comunicate a nuestro Whastsapp y te ayudamos con tu negocio.</p>
-          <a class="cta-btn" href="#"><i class="fa-brands fa-whatsapp"></i> Whastsapp</a>
+          <a class="cta-btn"
+            href="https://api.whatsapp.com/send?phone=573012461155&text=Hola%20La%20Perla%20Stereo,%20quiero%20una%20cancion."
+            target="_blank"><i class="fa-brands fa-whatsapp"></i> Whastsapp</a>
         </div>
 
       </div>
@@ -350,21 +352,6 @@
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
-
-            <!-- <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                  quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
-              </div>
-            </div> -->
-
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -386,8 +373,11 @@
           <div class="col-lg-6 col-md-6">
             <div class="info-box  mb-4">
               <i class="fa-brands fa-whatsapp"></i>
-              <h3>WhatsApp</h3>
-              <p>+57 000 000 0000</p>
+              <a href="https://api.whatsapp.com/send?phone=573012461155&text=Hola%20La%20Perla%20Stereo,%20quiero%20una%20cancion."
+                target="_blank">
+                <h3>WhatsApp</h3>
+                <p>+57 301 246 11 55</p>
+              </a>
             </div>
           </div>
 
@@ -406,7 +396,7 @@
       </div>
     </section><!-- End Contact Section -->
 
-  </main><!-- End #main --> 
+  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -421,7 +411,7 @@
               </p>
               <p>
                 Corozal, Sucre<br><br>
-                <strong><i class="fa-brands fa-whatsapp"></i> WhatsApp:</strong> +57 000 000 0000<br>
+                <strong><i class="fa-brands fa-whatsapp"></i> WhatsApp:</strong> +57 301 246 11 55<br>
               </p>
 
             </div>
@@ -433,17 +423,13 @@
             &copy; Copyright <strong><span>La Perla Stereo</span></strong> 2022. Todos los derechos.
           </div>
           <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/squadfree-free-bootstrap-template-creative/ -->
             Diseñado por <a href="mailto:leoandre91@hotmail.com">PowerDevelop</a>
           </div>
         </div>
   </footer><!-- End Footer -->
 
   <div id="wp-btn">
-    <a href="https://api.whatsapp.com/send?phone=5700000000&text=Hola%20La%20Perla%20Stereo,%20quiero%20una%20cancion."
+    <a href="https://api.whatsapp.com/send?phone=573012461155&text=Hola%20La%20Perla%20Stereo,%20quiero%20una%20cancion."
       target="_blank">
       <img src="assets/img/whatsapp-logo.png">
     </a>
