--- a/index.html
+++ b/index.html
@@ -236,94 +236,63 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
             <div class="portfolio-wrap">
               <img
-                src="https://lh4.googleusercontent.com/ngr9Ybte6p8pw4j4ut64WWq99MDj7Ne01YPB5S5--nRznze2ug2ZeVqZE2pg58PsWb7ateNhuP_IaS5GUYB2UukNlQM6ZSkItIU7bdVDjoGk0P6OBEdXKMvvYUR9qOUVzQ=w1280"
+                src="media/iglesia1.jpg"
                 class="img-fluid" alt="La Perla Stereo Corozal Sucre">
               <div class="portfolio-links">
-                <a href="https://lh4.googleusercontent.com/ngr9Ybte6p8pw4j4ut64WWq99MDj7Ne01YPB5S5--nRznze2ug2ZeVqZE2pg58PsWb7ateNhuP_IaS5GUYB2UukNlQM6ZSkItIU7bdVDjoGk0P6OBEdXKMvvYUR9qOUVzQ=w1280"
+                <a href="media/iglesia1.jpg"
                   data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 1"><i
                     class="fa-solid fa-magnifying-glass-plus"></i></a>
               </div>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
             <div class="portfolio-wrap">
               <img
-                src="https://lh3.googleusercontent.com/Rs4teGIHxb0H_0gfN50tDzu8kfDZfHS44ad6NrIp8PvpeyMapVxs3VEBXZ7w9HLkBM5Ww7MZve4y-zyr2iprSipOtBMJZFZRRzaK-qdx_llFdIXzE5EwgHpkvmejRq5i9Q=w1280"
+                src="media/parque.jpg"
                 class="img-fluid" alt="La Perla Stereo Corozal Sucre">
               <div class="portfolio-links">
-                <a href="https://lh3.googleusercontent.com/Rs4teGIHxb0H_0gfN50tDzu8kfDZfHS44ad6NrIp8PvpeyMapVxs3VEBXZ7w9HLkBM5Ww7MZve4y-zyr2iprSipOtBMJZFZRRzaK-qdx_llFdIXzE5EwgHpkvmejRq5i9Q=w1280"
+                <a href="media/parque.jpg"
                   data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 2"><i
                     class="fa-solid fa-magnifying-glass-plus"></i></a>
               </div>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
             <div class="portfolio-wrap">
               <img
-                src="https://lh6.googleusercontent.com/r6WwzT1WTko2bPQ7oQJm3gfMki7x0X26PuFm24FOdIiDjRuPrX5wVXsiiRz4wqf8xabByLE6oHVUKuUprvDEkOyBXsDOyuhDwJaebhSyjmUaMyxS1LQkNrSNrSKMNhCDGg=w1280"
+                src="media/parque1.jpg"
                 class="img-fluid" alt="La Perla Stereo Corozal Sucre">
               <div class="portfolio-links">
-                <a href="https://lh6.googleusercontent.com/r6WwzT1WTko2bPQ7oQJm3gfMki7x0X26PuFm24FOdIiDjRuPrX5wVXsiiRz4wqf8xabByLE6oHVUKuUprvDEkOyBXsDOyuhDwJaebhSyjmUaMyxS1LQkNrSNrSKMNhCDGg=w1280"
+                <a href="media/parque1.jpg"
                   data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 3"><i
                     class="fa-solid fa-magnifying-glass-plus"></i></a>
               </div>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
             <div class="portfolio-wrap">
               <img
-                src="https://lh5.googleusercontent.com/_2x3jG1ZxVK88uOF6D1hQ9Pp9jFA0a_mXk4x8-4CFKkWY6Z2boOI-4T-sX27LbjyaTuLvHsEJ3PG7HkX-YQ9S5s662UT-qWH55LBk4PEQnyi6qzRSD8_KVhAAHSUDSkRbw=w1280"
+                src="media/parque2.jpg"
                 class="img-fluid" alt="La Perla Stereo Corozal Sucre">
               <div class="portfolio-links">
-                <a href="https://lh5.googleusercontent.com/_2x3jG1ZxVK88uOF6D1hQ9Pp9jFA0a_mXk4x8-4CFKkWY6Z2boOI-4T-sX27LbjyaTuLvHsEJ3PG7HkX-YQ9S5s662UT-qWH55LBk4PEQnyi6qzRSD8_KVhAAHSUDSkRbw=w1280"
+                <a href="media/parque2.jpg"
                   data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 4"><i
                     class="fa-solid fa-magnifying-glass-plus"></i></a>
               </div>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
             <div class="portfolio-wrap">
               <img
-                src="https://lh4.googleusercontent.com/HmlV-6QzD9SMGC8Ac92hucmEXb1iQJlsG6HB1kawUAnrTq_7VdSAzEHd_JgSZu0kl5VBCCPAyqlfJqNU1ITbF62AWZlT_HiuxGg2RjeXm5DkZu3vMo76PZXk1Jn2po9ihg=w1280"
+                src="media/la farola.jpg"
                 class="img-fluid" alt="La Perla Stereo Corozal Sucre">
               <div class="portfolio-links">
-                <a href="https://lh4.googleusercontent.com/HmlV-6QzD9SMGC8Ac92hucmEXb1iQJlsG6HB1kawUAnrTq_7VdSAzEHd_JgSZu0kl5VBCCPAyqlfJqNU1ITbF62AWZlT_HiuxGg2RjeXm5DkZu3vMo76PZXk1Jn2po9ihg=w1280"
+                <a href="media/la farola.jpg"
                   data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 5"><i
                     class="fa-solid fa-magnifying-glass-plus"></i></a>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
-            <div class="portfolio-wrap">
-              <img
-                src="https://lh3.googleusercontent.com/aqX612zupd6KTYsY0YZJmEjoqxLuwnUlNzPL939NcF-6YZ3ZupcLq-tq37D8ssWCxqxcy7Iq9-5WVmXtbkB6nxmlIStd5Ry-6tKH3KZ9X1T6XVwu8KJ7XiiN5k5cNXf6TA=w1280"
-                class="img-fluid" alt="La Perla Stereo Corozal Sucre">
-              <div class="portfolio-links">
-                <a href="https://lh3.googleusercontent.com/aqX612zupd6KTYsY0YZJmEjoqxLuwnUlNzPL939NcF-6YZ3ZupcLq-tq37D8ssWCxqxcy7Iq9-5WVmXtbkB6nxmlIStd5Ry-6tKH3KZ9X1T6XVwu8KJ7XiiN5k5cNXf6TA=w1280"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 6"><i
-                    class="fa-solid fa-magnifying-glass-plus"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-fotos">
-            <div class="portfolio-wrap">
-              <img
-                src="https://lh6.googleusercontent.com/TexBHLxaK0Go6J_lDxVCLOuDg4JJTb3TTilMRLgI2A5ut1IFJ9nwyLBO1piqS2grLeMVI0_ZsHP-zCTmn6yVduecsOakvYBi_b8FpOjmNIifGA7BWmrsA3BRxIHJocGZ3g=w1280"
-                class="img-fluid" alt="La Perla Stereo Corozal Sucre">
-              <div class="portfolio-links">
-                <a href="https://lh6.googleusercontent.com/TexBHLxaK0Go6J_lDxVCLOuDg4JJTb3TTilMRLgI2A5ut1IFJ9nwyLBO1piqS2grLeMVI0_ZsHP-zCTmn6yVduecsOakvYBi_b8FpOjmNIifGA7BWmrsA3BRxIHJocGZ3g=w1280"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox" title="Foto 7"><i
-                    class="fa-solid fa-magnifying-glass-plus"></i></a>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-videos">
             <div class="portfolio-wrap">
               <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="img-fluid">
